# DemoFastAPI

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  test
alembic/: env.py
alembic/versions/: 06250d6525c2_add_hashed_password_field_to_user.py  380c9290ff7f_added_user_table.py  521225422fa9_add_token_table.py  9e74122e6e49_add_relationship_between_user_and_token.py  c0e91f01a922_change_datatype_of_role_user.py  e02bf1743b62_delete_salt_field_in_user_table.py  f9ebd5714034_added_user_table.py
requirements/: base.txt
scripts/: create-venv.sh  start-dev.sh
src/: constants.py  database.py  main.py  models.py
src/domain/entities/: token_entity.py  user_entity.py
src/domain/repositories/: token_repository.py  user_repository.py
src/domain/services/: token_service.py  user_service.py
src/models/: __init__.py  token.py  user.py
src/routers/: __init__.py  api.py  user.py
src/utils/: auth.py  email.py
templates/: register.html
