[tool.poetry]
name = "demofastapi"
version = "0.1.0"
description = "Demo FastAPI basic"
authors = ["Anh Phan Tuan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
pymysql = "^1.1.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
fastapi-authz = "^1.0.0"
casbin-sqlalchemy-adapter = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
